-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.7.0 Beta3
-
None
-
-
247453e7d (dev), 5b7240d96 (6.7), 45c72ec06 (6.7.0)
qt.svg: <use> element path-3 in wrong context! qt.svg.draw: The requested mask size is too big, ignoring qt.svg.draw: The requested buffer size is too big, ignoring qt.svg: <use> element path-1 in wrong context! qt.svg: <use> element path-3 in wrong context! qt.svg.draw: The requested mask size is too big, ignoring qt.svg.draw: The requested buffer size is too big, ignoring qt.svg: <use> element path-1 in wrong context! qt.svg: <use> element path-3 in wrong context! qt.svg.draw: The requested mask size is too big, ignoring qt.svg.draw: The requested buffer size is too big, ignoring
- relates to
-
QTBUG-121537 Implement support for "mask" in SVG generators
-
- Closed
-
For Gerrit Dashboard: QTBUG-123010 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
545814,14 | Enable <use> elements in <mask> and propagate state to mask children | dev | qt/qtsvg | Status: MERGED | +2 | 0 |
548368,2 | Enable <use> elements in <mask> and propagate state to mask children | 6.7 | qt/qtsvg | Status: MERGED | +2 | 0 |
548409,2 | Enable <use> elements in <mask> and propagate state to mask children | 6.7.0 | qt/qtsvg | Status: MERGED | +2 | 0 |